# Data_Science

./: boston.py  pandaspractice.py  pyproject.toml  tets.py  titanic.py
AI/: llm_api_call.ipynb  llm_api_call_with_image.ipynb  pyproject.toml
DecisionTree/: main.py  pyproject.toml  tree.ipynb
FastAPI/: app.py  pyproject.toml
FastAPI/fastapitrial/: pyproject.toml
Jupyter/: pyproject.toml  test.ipynb
Kmeans/: Kclustering.ipynb  main.py  pyproject.toml
LineraRegression/: linear_regression.ipynb  main.py  pyproject.toml
MultipleandPolynomialRegression/: fix_notebook.py  fix_notebook2.py  main.py  polynomial.ipynb  polyregression.ipynb  pyproject.toml
Neuralnetwork/: classification_using_neural_network.ipynb  pyproject.toml  simple_linear_regresssion_using_neural_network.ipynb
NumpyandPandas/: p.py
TitanicDataset/: main.py  pyproject.toml
confusion_matrix/: confusionheatmap.ipynb  main.py  pyproject.toml
correlation/: main.py  program.ipynb  pyproject.toml  test.ipynb
fastapipractice/: api.py  app.py  pyproject.toml
medical/: main.py  practice.ipynb  pyproject.toml
scaling/: main.py  pyproject.toml  sales_ttest.ipynb  scaling.ipynb
scikit/: main.py  pyproject.toml  scikit.ipynb
